objects/CDN_CH_IT_Approval_Hierarchy__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>IT_Approval_Hierarchy_Number__c</fullName>
        <label>IT Approval Hierarchy Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Manager_Level_1__c</fullName>
        <label>Manager Level 1</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Level_2__c</fullName>
        <label>Manager Level 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Level_3__c</fullName>
        <label>Manager Level 3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_ID__c</fullName>
        <label>Requestor ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>IT Approval Hierarchy</label>
</CustomObject>